# books-reviews

./: main.py  pyproject.toml
app/: main.py
app/core/: security.py
app/database/: database.py  dependencies.py
app/models/: book.py  review.py  user.py
app/routers/: auth.py  books.py  reviews.py
app/schemas/: book.py  reviews.py  user.py
app/services/: auth_service.py  book_service.py  review_service.py  stats_service.py
migrations/: env.py
migrations/versions/: 1b817b346da1_initial_schema.py  436f7438ff5f_add_users_table.py  8d4d635f3365_add_year_to_books.py
scripts/: seed.py
